Overhaul cards and fix dark mode features

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,6 +64,11 @@ body.dark-mode .btn-primary {
   --bs-btn-active-border-color: #bb86fc;
 }
 
+body.dark-mode .btn.disabled{
+  background-color: #dac1f7;
+  border-color: #dac1f7;
+}
+
 /* Dark Mode for light-background sections */
 body.dark-mode .light-background {
   --background-color: #1e1e1e; /* Darker background for light-background sections */
@@ -1091,7 +1096,7 @@ section,
 .portfolio-details .portfolio-description .testimonial-item p {
   font-style: italic;
   margin: 0 0 15px 0 0 0;
-  padding: 0;
+  padding: 10;
 }
 
 /*--------------------------------------------------------------
@@ -1101,6 +1106,8 @@ section,
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+  padding: 10px;
+  height: 250px;
 }
 
 /* On mouse-over, add a deeper shadow */
@@ -1110,5 +1117,22 @@ section,
 
 /* Add some padding inside the card container */
 .container {
-  padding: 2px 16px;
+  padding: 10px 16px;
+}
+
+div.links{
+  position: absolute;
+  bottom: 0px;
+  padding: 10px
+}
+
+div.tech-stack{
+  position: absolute;
+  bottom: 50px;
+}
+
+div.tech-stack img{
+  width: 50px;
+  height: 50px;
+  padding-bottom: 10px;
 }
